--- a/index.html
+++ b/index.html
@@ -3,12 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- Css links -->
+    <link rel="stylesheet" href="css/html5reset.css">
+    <!-- TBD if removed -->
+    <link rel="stylesheet" href="css/styleTest.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Home Page</title>
 </head>
 <body>
-    <!-- navigation -->
-    <!-- what this website is about -->
-    <!-- form -->
-    <!-- footer -->
+    <!-- Header -->
+    <header>
+        <a href="#main" class="skip-link">Skip to main content</a>
+        <!-- navigation -->
+        <nav>
+            <ul>
+                <li><a href = "index.html">Home</a></li>
+                <li><a href = "entriesOverview.html"> Journal Entries</a></li>
+                <li><a href = "about.html">About Me</a></li>
+            </ul>
+        </nav>
+        <h1>Home Page</h1>
+    </header>
+    <!-- Journal Entry Form -->
+    <section tabindex="0">
+        <!-- 
+         Explanation: User inputs are captured/saved to local storage for display on the overview and individual entry pages
+         Example: https://developer.mozilla.org/en-US/docs/Learn_web_development/Extensions/Forms/How_to_structure_a_web_form -->
+
+    </section>
+    <!-- Wishlist  -->
+    <section tabindex="0">
+        <!-- 
+         Explanation: Type in game you would like to add to wishlist, press enter that game is added and that information is fetched and game is added 
+         -->
+    </section>
+
+    <!-- Footer -->
+    <footer class="page-footer">
+        <div class="container">
+          <p>
+            Created and maintained by
+            <a href="https://twitter.com/5t3ph">Stephanie Eckles (@5t3ph)</a>
+          </p>
+          <ul>
+            <li>
+              <a href="https://twitter.com/5t3ph" class="link-twittercontact">Contact on Twitter</a>
+            </li>
+            <li>
+              <a href="https://github.com/5t3ph/stylestage" class="link-github"
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 32 32"
+                  aria-hidden="true"
+                  focusable="false"
+                >
+                  <path
+                    d="M32 12.408l-11.056-1.607-4.944-10.018-4.944 10.018-11.056 1.607 8 7.798-1.889 11.011 9.889-5.199 9.889 5.199-1.889-11.011 8-7.798z"
+                  ></path>
+                </svg>
+                Star on Github</a
+              >
+            </li>
+            <li><a href="/feed/" class="link-rss">RSS Feed</a></li>
+            <li><a href="/subscribe/" class="link-support">Subscribe to Updates</a></li>
+          </ul>
+          <p>
+            Crafted with semantic, accessible HTML and CSS, <strong>Style Stage</strong> is generated
+            with <a href="https://11ty.dev">11ty</a> and hosted on
+            <a href="https://netlify.com">Netlify</a>. This project uses
+            <a href="https://postcss.org/">PostCSS</a> with
+            <a href="https://github.com/postcss/autoprefixer">autoprefixer</a>.
+          </p>
+          <p>
+            Contributors retain copyright of all graphics used, and styles are available under
+            <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/">CC BY-NC-SA</a>
+          </p>
+        </div>
+    </footer>
 </body>
 </html>
