Added main tags

--- a/about.html
+++ b/about.html
@@ -24,19 +24,20 @@
         </nav>
         <h1>About Me</h1>
     </header>
+    <main>
+        <!-- Me Section-->
+        <section tabindex="0">
+            <!-- Img of me -->
+            <!-- Paragraph About Me-->
+                <!-- Who am I -->
+                <!-- What is/Why this website? -->
+        </section>
 
-    <!-- Me Section-->
-    <section tabindex="0">
-        <!-- Img of me -->
-        <!-- Paragraph About Me-->
-            <!-- Who am I -->
-             <!-- What is/Why this website? -->
-    </section>
-
-    <!-- Games I have recent Played Section -->
-    <section tabindex="0">
-        <!-- Image of Game + Title for 3 games -->
-    </section>
+        <!-- Games I have recent Played Section -->
+        <section tabindex="0">
+            <!-- Image of Game + Title for 3 games -->
+        </section>  
+    </main>
 
     <!-- Footer -->
     <footer class="page-footer">
