--- a/entriesOverview.html
+++ b/entriesOverview.html
@@ -24,15 +24,20 @@
         </nav>
         <h1>Overview of Journal Entries</h1>
     </header>
-    <!-- Filter for Journal Entries -->
-    <section tabindex="0">
+    <main>
+        <!-- Filter for Journal Entries 
+        Potential Example: -->
+        <section tabindex="0">
+            <!-- not sure how things will be filtered by yet... -->
 
-    </section>
-    
-    <!-- Journal Entry Previews-->
-    <section tabindex="0">
-        <!-- List of Preview of Journal Entries-->
-    </section>
+        </section>
+
+        <!-- Journal Entry Previews-->
+        <section tabindex="0">
+            <!-- List of Preview of Journal Entries-->
+        </section>
+    </main>
+
     <!-- Footer -->
     <footer class="page-footer">
         <div class="container">
