--- a/entry.html
+++ b/entry.html
@@ -28,39 +28,41 @@
      Journal Entry Template/Layout
      https://www.w3schools.com/tags/tag_template.asp -->
     <template>
-        <!-- Game Intro Section(could be fetched) -->
-        <section tabindex="0">
-            <!-- Key Image -->
-            <!-- Caption -->
-            <!-- description section -->
-            <!-- Description heading -->
-            <!-- Description's paragraph -->
-        </section>
+        <main>
+            <!-- Game Intro Section(could be fetched) -->
+            <section tabindex="0">
+                <!-- Key Image -->
+                <!-- Caption -->
+                <!-- description section -->
+                <!-- Description heading -->
+                <!-- Description's paragraph -->
+            </section>
 
-        <!-- User Generated -->
-        <section tabindex="0">
-            <!-- Overall Thoughts -->
-                <!-- Overall Image -->
-                <!-- Caption -->
-                <!-- Overall Thought Heading -->
-                <!-- Overall Thoughts paragraph -->
-            <!-- Key Moment(s) -->
-                <!-- Key moment(s) Image -->
-                <!-- Caption -->
-                <!-- Key Moment(s) Heading -->
-                <!-- Key Moment(s) paragraph -->
-            <!-- Conclusion -->
-                <!-- Conclusion Image -->
-                <!-- Caption -->
-                <!-- Conclusion Heading -->
-                <!-- Conclusion paragraph -->
-        </section>
+            <!-- User Generated -->
+            <section tabindex="0">
+                <!-- Overall Thoughts -->
+                    <!-- Overall Image -->
+                    <!-- Caption -->
+                    <!-- Overall Thought Heading -->
+                    <!-- Overall Thoughts paragraph -->
+                <!-- Key Moment(s) -->
+                    <!-- Key moment(s) Image -->
+                    <!-- Caption -->
+                    <!-- Key Moment(s) Heading -->
+                    <!-- Key Moment(s) paragraph -->
+                <!-- Conclusion -->
+                    <!-- Conclusion Image -->
+                    <!-- Caption -->
+                    <!-- Conclusion Heading -->
+                    <!-- Conclusion paragraph -->
+            </section>
 
-        <!-- View other journal entries-->
-        <section tabindex="0">
-            <!-- Game Image -->
-            <!-- Game Title -->
-        </section>
+            <!-- View other journal entries-->
+            <section tabindex="0">
+                <!-- Game Image -->
+                <!-- Game Title -->
+            </section>
+        </main>
     </template>
 
     <!-- Footer -->
