--- a/index.html
+++ b/index.html
@@ -24,19 +24,22 @@
         </nav>
         <h1>Home Page</h1>
     </header>
-    <!-- Journal Entry Form -->
-    <section tabindex="0">
-        <!-- 
-         Explanation: User inputs are captured/saved to local storage for display on the overview and individual entry pages
-         Example: https://developer.mozilla.org/en-US/docs/Learn_web_development/Extensions/Forms/How_to_structure_a_web_form -->
+    
+    <main>
+        <!-- Journal Entry Form -->
+        <section tabindex="0">
+            <!-- 
+            Explanation: User inputs are captured/saved to local storage for display on the overview and individual entry pages
+            Example: https://developer.mozilla.org/en-US/docs/Learn_web_development/Extensions/Forms/How_to_structure_a_web_form -->
 
-    </section>
-    <!-- Wishlist  -->
-    <section tabindex="0">
-        <!-- 
-         Explanation: Type in game you would like to add to wishlist, press enter that game is added and that information is fetched and game is added 
-         -->
-    </section>
+        </section>
+        <!-- Wishlist  -->
+        <section tabindex="0">
+            <!-- 
+            Explanation: Type in game you would like to add to wishlist, press enter that game is added and that information is fetched and game is added 
+            -->
+        </section>
+    </main>
 
     <!-- Footer -->
     <footer class="page-footer">
@@ -81,4 +84,5 @@
         </div>
     </footer>
 </body>
+    <script src="js/script.js" defer></script>
 </html>
