Putting in bootstrap and defining form area

--- a/about.html
+++ b/about.html
@@ -39,7 +39,9 @@
         </section>  
     </main>
 
-    <!-- Footer -->
+       <!-- Footer -->
+    <!-- Adapted from  https://stylestage.dev/styles/a-scottish-landscape/-->
+     <!-- Keep to add in credits for about page for now -->
     <footer class="page-footer">
         <div class="container">
           <p>
