--- a/entriesOverview.html
+++ b/entriesOverview.html
@@ -24,6 +24,10 @@
         </nav>
         <h1>Overview of Journal Entries</h1>
     </header>
+
+    <!-- Potential additions/consdierations:
+     1. Validation for journal form, some things as optional like image uploads, some things required and the user unable to ,ove forward if nothing is there -->
+
     <main>
         <!-- Filter for Journal Entries 
         Potential Example: -->
@@ -34,11 +38,21 @@
 
         <!-- Journal Entry Previews-->
         <section tabindex="0">
-            <!-- List of Preview of Journal Entries-->
+            <!-- List of Previews of Journal Entries-->
+             <!-- 3 columns -->
+              <!-- 1 -->
+                <!-- Game image -->
+              <!-- 2 -->
+                <!-- Entry Title -->
+                <!-- Game Title -->
+                <!-- Tags (for filtering)-->
+              <!-- 3 -->
+                <!-- Button to open full journal entry-->
         </section>
     </main>
 
     <!-- Footer -->
+    <!-- Adapted from  https://stylestage.dev/styles/a-scottish-landscape/-->
     <footer class="page-footer">
         <div class="container">
           <p>
