--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Css links -->
+     <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/html5reset.css">
     <!-- TBD if removed -->
     <link rel="stylesheet" href="css/styleTest.css">
@@ -30,9 +32,79 @@
         <section tabindex="0">
             <!-- 
             Explanation: User inputs are captured/saved to local storage for display on the overview and individual entry pages
-            Example: https://developer.mozilla.org/en-US/docs/Learn_web_development/Extensions/Forms/How_to_structure_a_web_form -->
+            Example: https://developer.mozilla.org/en-US/docs/Learn_web_development/Extensions/Forms/How_to_structure_a_web_form 
+            https://stackoverflow.com/questions/17087636/how-to-save-data-from-a-form-with-html5-local-storage -->
+            <!-- Might use bootstrap -->
 
+            <form>
+                <fieldset>
+                  <legend>Input your Thoughts</legend>
+                  <!-- Video Game Information (Stuff that can be fetched to be populated) -->
+                  <p>
+                    <input type="text" name="size" id="size_1" placeholder="small" />
+                    <label for="size_1">Small</label>
+                  </p>
+                  <!-- Actual Journal Entry -->
+                    <!-- Overall Thoughts heading -->
+                    <fieldset>
+                        <p>
+                            <!-- Overall Thought Image & Caption -->
+                            <label for="size_1">Small</label>
+                            <input type="text" name="size" id="size_1" placeholder="small" />
+                        </p>
+                        <p>
+                            <!-- Overall Thought Heading -->
+                            <label for="size_1">Small</label>
+                            <input type="text" name="size" id="size_1" placeholder="small" />
+                        </p>
+                        <p>
+                            <!-- Overall Thoughts paragraph -->
+                            <label for="size_1">Small</label>
+                            <input type="text" name="size" placeholder="small" />
+                        </p>
+                    </fieldset>
+
+                    <!-- Key Moment(s) -->
+                    <fieldset>
+                        <p>
+                            <!-- Key Moment(s) Image & Caption -->
+                            <label for="size_1">Small</label>
+                            <input type="text" name="size" id="size_1" placeholder="small" />
+                        </p>
+                        <p>
+                            <!-- Key Moment(s) Heading -->
+                            <label for="size_1">Small</label>
+                            <input type="text" name="size" id="size_1" placeholder="small" />
+                        </p>
+                        <p>
+                            <!-- Key Moment(s) paragraph -->
+                            <label for="size_1">Small</label>
+                            <input type="text" name="size" placeholder="small" />
+                        </p>
+                    </fieldset>
+
+                    <!-- Conclusion -->
+                    <fieldset>
+                        <p>
+                            <!-- Conclusion Image & Caption -->
+                            <label for="size_1">Small</label>
+                            <input type="text" name="size" id="size_1" placeholder="small" />
+                        </p>
+                        <p>
+                            <!-- Conclusion Heading -->
+                            <label for="size_1">Small</label>
+                            <input type="text" name="size" id="size_1" placeholder="small" />
+                        </p>
+                        <p>
+                            <!-- Conclusion paragraph -->
+                            <label for="size_1">Small</label>
+                            <input type="text" name="size" placeholder="small" />
+                        </p>
+                    </fieldset>
+                </fieldset>
+              </form>              
         </section>
+
         <!-- Wishlist  -->
         <section tabindex="0">
             <!-- 
@@ -45,44 +117,12 @@
     <footer class="page-footer">
         <div class="container">
           <p>
-            Created and maintained by
-            <a href="https://twitter.com/5t3ph">Stephanie Eckles (@5t3ph)</a>
+            ૮꒰ ˶• ༝ •˶꒱ა ♡
+            <br>
+            Created by <a href="https://www.linkedin.com/in/lilymadojemu/">Lily Madojemu</a>
           </p>
-          <ul>
-            <li>
-              <a href="https://twitter.com/5t3ph" class="link-twittercontact">Contact on Twitter</a>
-            </li>
-            <li>
-              <a href="https://github.com/5t3ph/stylestage" class="link-github"
-                ><svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 32 32"
-                  aria-hidden="true"
-                  focusable="false"
-                >
-                  <path
-                    d="M32 12.408l-11.056-1.607-4.944-10.018-4.944 10.018-11.056 1.607 8 7.798-1.889 11.011 9.889-5.199 9.889 5.199-1.889-11.011 8-7.798z"
-                  ></path>
-                </svg>
-                Star on Github</a
-              >
-            </li>
-            <li><a href="/feed/" class="link-rss">RSS Feed</a></li>
-            <li><a href="/subscribe/" class="link-support">Subscribe to Updates</a></li>
-          </ul>
-          <p>
-            Crafted with semantic, accessible HTML and CSS, <strong>Style Stage</strong> is generated
-            with <a href="https://11ty.dev">11ty</a> and hosted on
-            <a href="https://netlify.com">Netlify</a>. This project uses
-            <a href="https://postcss.org/">PostCSS</a> with
-            <a href="https://github.com/postcss/autoprefixer">autoprefixer</a>.
-          </p>
-          <p>
-            Contributors retain copyright of all graphics used, and styles are available under
-            <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/">CC BY-NC-SA</a>
-          </p>
-        </div>
     </footer>
 </body>
-    <script src="js/script.js" defer></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="js/script.js" defer></script>
 </html>
