--- a/entriesOverview.html
+++ b/entriesOverview.html
@@ -13,7 +13,7 @@
 <body>
     <!-- Header -->
     <header>
-        <a href="#main" class="skip-link">Skip to main content</a>
+        <a href="#main" id="skip">Skip to main content</a>
         <!-- navigation -->
         <nav>
             <ul>
