--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Css links -->
-     <!-- bootstrap -->
+    <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/html5reset.css">
     <!-- TBD if removed -->
@@ -15,7 +15,7 @@
 <body>
     <!-- Header -->
     <header>
-        <a href="#main" class="skip-link">Skip to main content</a>
+        <a href="#main" id="skip">Skip to main content</a>
         <!-- navigation -->
         <nav>
             <ul>
@@ -37,16 +37,16 @@
             <!-- Might use bootstrap -->
 
             <form>
-                <fieldset>
+                <fieldset class="form-group">
                   <legend>Input your Thoughts</legend>
                   <!-- Video Game Information (Stuff that can be fetched to be populated) -->
                   <p>
-                    <input type="text" name="size" id="size_1" placeholder="small" />
-                    <label for="size_1">Small</label>
+                    <label for="videoGameTitleForm">Video Game Title</label>
+                    <input type="text" class="form-control" name="size" id="videoGameTitleForm" placeholder="Enter title"/>
                   </p>
                   <!-- Actual Journal Entry -->
                     <!-- Overall Thoughts heading -->
-                    <fieldset>
+                    <fieldset class="form-group">
                         <p>
                             <!-- Overall Thought Image & Caption -->
                             <label for="size_1">Small</label>
@@ -65,7 +65,7 @@
                     </fieldset>
 
                     <!-- Key Moment(s) -->
-                    <fieldset>
+                    <fieldset class="form-group">
                         <p>
                             <!-- Key Moment(s) Image & Caption -->
                             <label for="size_1">Small</label>
@@ -84,7 +84,7 @@
                     </fieldset>
 
                     <!-- Conclusion -->
-                    <fieldset>
+                    <fieldset class="form-group">
                         <p>
                             <!-- Conclusion Image & Caption -->
                             <label for="size_1">Small</label>
@@ -124,5 +124,5 @@
     </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<script src="js/script.js" defer></script>
+<script src="js/home.js" defer></script>
 </html>
