--- a/entriesOverview.html
+++ b/entriesOverview.html
@@ -14,6 +14,7 @@
     <!-- Header -->
     <header>
         <a href="#main" id="skip">Skip to main content</a>
+        <h1>Your Journal Entries</h1>
         <!-- navigation -->
         <nav>
             <ul>
@@ -22,7 +23,6 @@
                 <li><a href = "about.html">About Me</a></li>
             </ul>
         </nav>
-        <h1>Overview of Journal Entries</h1>
     </header>
 
     <!-- Potential additions/consdierations:
@@ -54,45 +54,12 @@
     <!-- Footer -->
     <!-- Adapted from  https://stylestage.dev/styles/a-scottish-landscape/-->
     <footer class="page-footer">
-        <div class="container">
-          <p>
-            Created and maintained by
-            <a href="https://twitter.com/5t3ph">Stephanie Eckles (@5t3ph)</a>
-          </p>
-          <ul>
-            <li>
-              <a href="https://twitter.com/5t3ph" class="link-twittercontact">Contact on Twitter</a>
-            </li>
-            <li>
-              <a href="https://github.com/5t3ph/stylestage" class="link-github"
-                ><svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 32 32"
-                  aria-hidden="true"
-                  focusable="false"
-                >
-                  <path
-                    d="M32 12.408l-11.056-1.607-4.944-10.018-4.944 10.018-11.056 1.607 8 7.798-1.889 11.011 9.889-5.199 9.889 5.199-1.889-11.011 8-7.798z"
-                  ></path>
-                </svg>
-                Star on Github</a
-              >
-            </li>
-            <li><a href="/feed/" class="link-rss">RSS Feed</a></li>
-            <li><a href="/subscribe/" class="link-support">Subscribe to Updates</a></li>
-          </ul>
-          <p>
-            Crafted with semantic, accessible HTML and CSS, <strong>Style Stage</strong> is generated
-            with <a href="https://11ty.dev">11ty</a> and hosted on
-            <a href="https://netlify.com">Netlify</a>. This project uses
-            <a href="https://postcss.org/">PostCSS</a> with
-            <a href="https://github.com/postcss/autoprefixer">autoprefixer</a>.
-          </p>
-          <p>
-            Contributors retain copyright of all graphics used, and styles are available under
-            <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/">CC BY-NC-SA</a>
-          </p>
-        </div>
+      <div class="container">
+        <p>
+          ૮꒰ ˶• ༝ •˶꒱ა ♡
+          <br>
+          Created by <a href="https://www.linkedin.com/in/lilymadojemu/">Lily Madojemu</a>
+        </p>
     </footer>
 </body>
 <script src="js/overview.js" defer></script>
