--- a/entry.html
+++ b/entry.html
@@ -14,6 +14,8 @@
     <!-- Header -->
     <header>
         <a href="#main" id="skip">Skip to main content</a>
+        <!-- title of journal entry, UGC -->
+        <h1>Journal Entry</h1>
         <!-- navigation -->
         <nav>
             <ul>
@@ -22,8 +24,7 @@
                 <li><a href = "about.html">About Me</a></li>
             </ul>
         </nav>
-        <!-- title of journal entry, UGC -->
-        <h1>Journal Entry</h1>
+
     </header>
     
     <!-- 
@@ -72,17 +73,10 @@
     <footer class="page-footer">
         <div class="container">
           <p>
-            Created and maintained by
-            <a href="https://twitter.com/5t3ph">Stephanie Eckles (@5t3ph)</a>
+            ૮꒰ ˶• ༝ •˶꒱ა ♡
+            <br>
+            Created by <a href="https://www.linkedin.com/in/lilymadojemu/">Lily Madojemu</a>
           </p>
-          <ul>
-            <li>
-              <a href="https://twitter.com/5t3ph" class="link-twittercontact">Contact on Twitter</a>
-            </li>
-
-            </li>
-          </ul>
-        </div>
     </footer>
 </body>
 <script src="js/entry.js" defer></script>
