API fetch Works

--- a/index.html
+++ b/index.html
@@ -122,7 +122,20 @@
                 <!-- 
                 Explanation: Type in game you would like to add to wishlist, press enter that game is added and that information is fetched and game is added 
                 -->
+
+                <!-- Search Games Area -->
+                <form id="search">
+                    <input class="search-input" 
+                    
+                    type="search" name="search" placeholder="Search for games"/>
+                </form>
+                <!-- Where search results will appear, the user will then click on a game and it will become part of the official wishlist -->
+                
+                <!-- Wishlisted Games Area -->
                 <h2>My Wishlist</h2>
+
+
+
             </section>
         </article>
     </main>
