Set up form areas

--- a/entriesOverview.html
+++ b/entriesOverview.html
@@ -28,16 +28,15 @@
     <!-- Potential additions/consdierations:
      1. Validation for journal form, some things as optional like image uploads, some things required and the user unable to ,ove forward if nothing is there -->
 
-    <main>
+    <main id="#main">
         <!-- Filter for Journal Entries 
         Potential Example: -->
         <section tabindex="0">
             <!-- not sure how things will be filtered by yet... -->
-
         </section>
 
         <!-- Journal Entry Previews-->
-        <section tabindex="0">
+        <section tabindex="0" id="entryContainer">
             <!-- List of Previews of Journal Entries-->
              <!-- 3 columns -->
               <!-- 1 -->
