Establish how to show information about a specific entry on the page

--- a/entriesOverview.html
+++ b/entriesOverview.html
@@ -61,5 +61,6 @@
         </p>
     </footer>
 </body>
+<script src="js/home.js" defer></script>
 <script src="js/overview.js" defer></script>
 </html>
