--- a/entry.html
+++ b/entry.html
@@ -28,11 +28,10 @@
     </header>
     
     <!-- 
-     Journal Entry Template/Layout
-     https://www.w3schools.com/tags/tag_template.asp -->
-    <template>
-        <main>             
-            <!-- Game Intro Section(could be fetched) -->
+     Journal Entry Template/Layout -->
+    <main id ="main"> 
+        <div id="entryContainer">
+                <!-- Game Intro Section(could be fetched) -->
             <section tabindex="0">
                 <!-- Key Image -->
                 <!-- Caption -->
@@ -65,8 +64,9 @@
                 <!-- Game Image -->
                 <!-- Game Title -->
             </section>
-        </main>
-    </template>
+        </div>            
+        
+    </main>
 
     <!-- Footer -->
     <!-- Adapted from  https://stylestage.dev/styles/a-scottish-landscape/-->
@@ -79,5 +79,6 @@
           </p>
     </footer>
 </body>
+<script src="js/home.js" defer></script>
 <script src="js/entry.js" defer></script>
 </html>
