--- a/about.html
+++ b/about.html
@@ -84,5 +84,6 @@
         </div>
     </footer>
 </body>
+<script src="js/home.js" defer></script>
 <script src="js/about.js" defer></script>
 </html>
