Entry is being saved to localstorage!!!

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                       <p>
                         <label for="videoGameTitleForm">Video Game Title</label>
                         <input type="text" class="form-control" name="size" id="videoGameTitleForm" placeholder="Enter title"/>
-                        <small class="text-muted">Required</small>
+                        <small class="form-text text-muted">Required</small>
                         <div class="invalid-feedback">
                             Game title is required
                          </div>
@@ -64,7 +64,7 @@
                       <p>
                         <label for="dateEntry">Date</label>
                         <input type="text" class="form-control" name="dateEntry" id="dateEntryId"/>
-                        <small class="text-muted">Required</small>
+                        <small class="form-text text-muted" >Required</small>
                         <div class="invalid-feedback">
                           Date is required
                         </div>
@@ -73,7 +73,6 @@
                         <!-- Overall Thoughts -->
                         <fieldset class="form-group">
                             <h3> Overall Thoughts</h3>
-
                             <p class="row">
                                 <!-- Image Address-->
                                 <label for="thoughtImg">Image Address/URL </label>
@@ -82,7 +81,7 @@
                                 <div class="invalid-feedback">
                                   Invalid Image Address
                                 </div>
-                                
+
                                 <!-- Image Caption Input -->
                                 <label for="thoughtImgCaption">Image Caption</label>
                                 <input type="text" class="form-control" name="thoughtImgCaption" id="thoughtImgCaptionId"/>
