Going to confirm screen after entry captured

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         <!-- Select to choose tags associated with this game -->
                         <div class="form-group">
                             <label for="entryTags">Tags</label>
-                            <select multiple class="form-control" id="entryTags">
+                            <select class="form-control" id="entryTags">
                               <option>Played</option>
                               <option>Did Not Finish</option>
                               <option>Playing</option>
@@ -176,7 +176,12 @@
                     <input type="submit" id="formSubmit" value="Submit">
                   </form>              
             </section>
-         </article>
+        </article>
+        <article id="guidelines">
+            <section id="entryConfirmScreen" class="hidden">
+
+            </section>
+        </article>
 
         <!-- Wishlist  -->
         <article id="contribute">
