Img validation for forms works

--- a/index.html
+++ b/index.html
@@ -76,12 +76,11 @@
                             <p class="row">
                                 <!-- Image Address-->
                                 <label for="thoughtImg">Image Address/URL </label>
-                                <input type="text" class="form-control"  name="thoughtImg" id="thoughtImgId"/>
+                                <input type="text" class="form-control" name="thoughtImg" id="thoughtImgId"/>
                                 <small class="text-muted">Optional, Img Address of picture representing your overall thoughts of your game</small>
                                 <div class="invalid-feedback">
                                   Invalid Image Address
                                 </div>
-
                                 <!-- Image Caption Input -->
                                 <label for="thoughtImgCaption">Image Caption</label>
                                 <input type="text" class="form-control" name="thoughtImgCaption" id="thoughtImgCaptionId"/>
@@ -93,7 +92,6 @@
                                 <label for="overallThoughtsParagraph">Overarching Thoughts</label>
                                 <textarea class="form-control" name="overallThoughtsParagraph" id="overallThoughtsParagraphId"></textarea>
                                 <small class="text-muted">Required</small>
-
                                 <div class="invalid-feedback">
                                   Your overall thoughts is required.
                                 </div>
@@ -110,13 +108,11 @@
                                 <!-- Key Moment(s) Image & Caption -->
                                 <!-- Image Address-->
                                 <label for="keyImg">Image Address/URL </label>
-                                <input type="text" name="keyImg" id="keyImgId" placeholder="Image Address/URL" />
-
+                                <input type="text" class="form-control" name="keyImg" id="keyImgId"/>
                                 <small class="text-muted">Optional, Image Address/URL of picture representing a key moment of the video game</small>
                                 <div class="invalid-feedback">
                                   Invalid Image Address
                                 </div>
-
                                 <!-- Image Caption Input -->
                                 <label for="keyImgCaption">Image Caption</label>
                                 <input type="text" name="keyImgCaption" id="keyImgCaptionId" placeholder="Caption"/>
@@ -133,17 +129,16 @@
                         <!-- Conclusion -->
                         <fieldset class="form-group">
                             <h3> Conclusion</h2>
-                            <p> What are your final thoughts on this game?</p>
+                            <p>What are your final thoughts on this game?</p>
 
                             <p class="row">
                                 <!-- Conclusion Image & Caption -->
                                 <label for="conclusionImg">Image Address/URL</label>
-                                <input type="text" name="conclusionImg" id="conclusionImgId" placeholder="Image Address/URL" />
+                                <input type="text" class="form-control" name="conclusionImg" id="conclusionImgId"/>
                                 <small class="text-muted">Optional, Img Address of picture representing your concluding thoughts</small>
                                 <div class="invalid-feedback">
                                   Invalid Image Address
                                 </div>
-
                                 <!-- Image Caption Input -->
                                 <label for="conclusionImageCaption">Image Caption</label>
                                 <input type="text" name="conclusionImgCaption" id="conclusionImgCaptionId"/>
@@ -154,7 +149,6 @@
                                 <label for="conclusionParagraph">Concluding Thoughts</label>
                                 <textarea class="form-control" name="conclusionParagraph" id="conclusionParagraphId"></textarea>
                                 <small class="text-muted">Required</small>
-
                                 <div class="invalid-feedback">
                                   Concluding Thoughts are required.
                                 </div>
